made changes on user html

--- a/style.css
+++ b/style.css
@@ -25,4 +25,5 @@ button{
     background-color: #069EDB;
     border-radius: 35px;
     text-decoration: none;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
 }
