--- a/style.css
+++ b/style.css
@@ -1,32 +1,61 @@
-body{
+/* styles.css */
+
+body {
     background-color: #F9DC1E;
-}
-.container{
+  }
+  
+  .container {
     text-align: center;
     border: solid;
     border-color: black;
     border-radius: 15px;
-    margin: 25px;
     padding-bottom: 50px;
-
-}
-img{
-    width:250px;
-}
-.row{
-    display: grid;
-}
-h1{
+    background-color: white;
+    display: flex;
+    margin-top: 25px;
+    justify-content: space-between;
+  }
+  
+  img {
+    width: 140px;
+  }
+  
+  h1 {
     font-weight: 500;
     font-style: normal;
-    line-height: 150px;
+    line-height: 100px;
     font-family: "Varela Round", sans-serif;
-}
-button{
+  }
+  
+  button {
     text-align: center;
     width: 150px;
     background-color: #069EDB;
     border-radius: 35px;
     text-decoration: none;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+  }
+  
+  .box {
+    width: 45px;
+    height: 45px;
+    font-size: 2em;
+    text-align: center;
+    border-radius: 50%;
+  }
+  
+  #boxred{
+    background-color: red;
 }
+#boxyellow{
+    background-color:yellow ;
+}
+#boxgreen{
+    background-color: green;
+
+}
+#boxblue{
+    background-color: blue;
+}
+
+  
