--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
     margin-top: 25px;
     justify-content: space-between;
   }
+  .contain{
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+
+  }
   
   img {
     width: 140px;
@@ -34,6 +40,9 @@ body {
     border-radius: 35px;
     text-decoration: none;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.6);
+  }
+  .wrapper{
+    text-align: center;
   }
   
   .box {
