--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 body {
     background-color: #F9DC1E;
+    display:grid;
+    place-items: center;
   }
   
   .container {
@@ -45,12 +47,13 @@ body {
     text-align: center;
   }
   
-  .box {
+  #boxred, #boxgreen,#boxblue, #boxyellow {
     width: 45px;
     height: 45px;
     font-size: 2em;
     text-align: center;
     border-radius: 50%;
+    display: inline-block;
   }
   
   #boxred{
@@ -67,4 +70,9 @@ body {
     background-color: blue;
 }
 
+.keyboard{
+  display:flex;
+  flex-direction: colunn;
+  align-items:center;
+}
   
